[package]
name = "sniffle"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
repository = "https://github.com/Vociferix/sniffle"
description = "Packet sniffing and crafting library"

[dependencies]
sniffle-core = { path = "core", default-features = false }
sniffle-ende = { path = "ende" }
sniffle-uint = { path = "uint" }
sniffle-capfile = { path = "capfile", default-features = false }
nom = "7"
concat-idents = "1.1"
ctor = "0.1"

[features]
default = ["npcap"]
libpcap = ["sniffle-core/libpcap"]
npcap = ["libpcap", "sniffle-core/npcap"]

[workspace]
members = [
   "link-types",
   "libpcap-sys",
   "pcaprs",
   "ende",
   "uint",
   "core",
   "capfile",
]
