[package]
name = "sniffle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
repository = "https://github.com/Vociferix/sniffle"
description = "Packet sniffing and crafting library"

[dependencies]
sniffle-core = { path = "core", default-features = false }
sniffle-ende = { path = "ende" }
sniffle-uint = { path = "uint" }
sniffle-capfile = { path = "capfile", default-features = false }
sniffle-utils = { path = "utils" }
sniffle-protos = { path = "protos" }
nom = "7.1"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.25", features = ["rt", "rt-multi-thread", "macros", "io-std"] }

[features]
default = ["npcap"]
libpcap = ["sniffle-core/libpcap"]
npcap = ["libpcap", "sniffle-core/npcap"]

[workspace]
members = [
    "link-types",
    "libpcap-sys",
    "pcaprs",
    "ende",
    "uint",
    "address",
    "core",
    "capfile",
    "utils",
    "protos",
]
