[package]
name = "sniffle-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bytemuck = "1"
sniffle-address-parse = { path = "parse" }
sniffle-address-macros = { path = "macros" }
sniffle-ende = { path = "../ende" }
sniffle-uint = { path = "../uint" }

[build-dependencies]
csv = "1.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
