[package]
name = "sniffle-capfile"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
repository = "https://github.com/Vociferix/sniffle"
description = "Packet capture file library for sniffle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sniffle-core = { path = "../core" }
pcaprs = { path = "../pcaprs" }
async-trait = "0.1"
tokio = { version = "1.25", default-features = false, features = ["fs", "io-util"] }
