[package]
name = "sniffle-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
repository = "https://github.com/Vociferix/sniffle"
description = "Sniffle library core functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link-types = { path = "../link-types" }
pcaprs = { path = "../pcaprs", optional = true, default-features = false }
sniffle-ende = { path = "../ende" }
sniffle-address = { path = "../address" }
lazy_static = "1.4"
ctor = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1.25", default-features = false, features = ["rt", "sync", "io-util"] }
paste = "1.0"

[features]
default = ["npcap"]
libpcap = ["pcaprs", "pcaprs/tokio"]
npcap = ["libpcap", "pcaprs/npcap"]
