[package]
name = "sniffle-decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
bytemuck = "1"
thiserror = "1"
sniffle-decode-derive = { path = "derive" }

[dev-dependencies]
sniffle-bytes = { path = "../bytes" }
