[package]
name = "libpcap-sys"
version = "0.1.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vociferix/sniffle"
description = "Rust bindings for libpcap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[features]
default = ["npcap"]
npcap = []

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["ws2def", "winsock2"]

[build-dependencies]
pkg-config = "0.3"
