[package]
name = "link-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
repository = "https://github.com/Vociferix/sniffle"
description = "Common data link type definitions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
