[package]
name = "pcaprs"
version = "0.1.0"
authors = ["Jack Bernard <jack.a.bernard.jr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vociferix/sniffle"
description = "Safe Rust API for libpcap functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpcap-sys = { path = "../libpcap-sys", default-features = false }
libc = "0.2"
link-types = { path = "../link-types" }
tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }
async-std = { version = "1", optional = true }
smol = { version = "1", optional = true, default-features = false }

[features]
default = ["npcap", "smol"]
npcap = ["libpcap-sys/npcap"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
smol = ["dep:smol"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["ws2def", "ws2ipdef", "winsock2"]
