[package]
name = "sniffle-protos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vociferix/sniffle"
description = "Protocols for Sniffle library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sniffle-core = { path = "../core", default-features = false }
sniffle-ende = { path = "../ende" }
sniffle-uint = { path = "../uint" }
sniffle-utils = { path = "../utils" }
nom = "7"
concat-idents = "1.1"
ctor = "0.1"
chrono = "0.4"
